Fix EZP-23829: Paragraph alignment ignored in legacy rendered frontend
(cherry picked from commit 7bf758a678c7b045c29deb1ad61f7f15b55ac6b4)

--- a/packages/ezdemo_extension/ezextension/ezdemo/design/ezdemo/stylesheets/bootstrap.css
+++ b/packages/ezdemo_extension/ezextension/ezdemo/design/ezdemo/stylesheets/bootstrap.css
@@ -4494,6 +4494,18 @@ a.thumbnail:hover {
   font-weight: 200;
   line-height: 31.5px;
 }
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
+.text-center {
+  text-align: center;
+}
+.text-justify {
+  text-align: justify;
+}
 .pull-right {
   float: right;
 }
